fix spacing for doctors section

--- a/css/main.css
+++ b/css/main.css
@@ -26668,7 +26668,7 @@ textarea, .form-control {
   padding: 60px 0;
   background-image: url("../images/zandstra-bio.jpg");
   background-size: cover;
-  background-position: 10% 10%; }
+  background-position: 15% 15%; }
   @media (max-width: 1200px) {
     #meet-the-doctor {
       background-image: url("../images/zandstra-bio-bkgd-mobile.jpg"); } }
@@ -26723,8 +26723,7 @@ textarea, .form-control {
   font-size: 18px; }
 
 #meet-the-doctor > div > div > div.col-sm-8 {
-  postion: relative;
-  left: 5%; }
+  postion: relative; }
 
 .device-md #meet-the-doctor {
   background-position-x: 25%; }
